<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Arendelle</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_rename_name">New name</string>

    <!-- Main activity -->
    <string name="welcome_title">Welcome to Arendelle</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_new">New</string>
    <string name="action_basics">Basics</string>
    <string name="action_learn">Learn Arendelle</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate Me</string>
    <string name="action_contact">Report Bug</string>
    <string name="action_about">About</string>
    <string name="toast_storage_not_accessible">Storage not accessible</string>
    <string name="toast_enter_name_for_project">Please enter a name for the project</string>
    <string name="toast_enter_name_for_main_function">Please enter a name for the main function which is the entry point of your project</string>
    <string name="toast_main_function_in_folder">The main function has to be in the main folder. Please remove the dots to proceed.</string>
    <string name="dialog_new_project_title">New project</string>
    <string name="dialog_new_project_name">Name</string>
    <string name="dialog_new_project_main_function_name">Name of main function</string>

    <!-- Editor activity -->
    <string name="action_run">Run</string>
    <string name="toast_you_cannot_delete_main_function">You cannot delete the main function!</string>
    <string name="toast_downgrade_warning">This project was edited with a newer IDE than the current. We recommend you to update this app to prevent errors.</string>
    <string name="dialog_new_function_title">New function</string>
    <string name="dialog_new_function_name">Name</string>
    <string-array name="dialog_file_options">
        <item>Rename</item>
        <item>Delete</item>
    </string-array>

    <string name="key_loop_open">[</string>
    <string name="key_grammar_divider">,</string>
    <string name="key_loop_close">]</string>
    <string name="key_space_open">(</string>
    <string name="key_space_close">)</string>
    <string name="key_condition_open">{</string>
    <string name="key_condition_close">}</string>
    <string name="key_space_sign">\@</string>
    <string name="key_source_sign">#</string>
    <string name="key_tab">tab</string>
    <string name="key_divide_sign">/</string>
    <string name="key_equal_sign">=</string>
    <string name="key_minus_sign">-</string>
    <string name="key_plus_sign">+</string>
    <string name="key_multiply_sign">*</string>
    <string name="key_function_sign">!</string>
    <string name="key_count_sign">\?</string>
    <string name="key_stored_space_sign">$</string>
    <string name="key_key_sign">&amp;</string>
    <string name="key_pow_sign">^</string>
    <string name="key_modulo_sign">%</string>
    <string name="key_function_header_open">&lt;</string>
    <string name="key_function_header_close">&gt;</string>
    <string name="key_title_sign">\'</string>
    <string name="key_string_sign">\"</string>
    <string name="key_string_interpolation_sign">\\</string>

    <!-- Screen activity -->
    <string name="action_stop">Stop</string>
    <string name="action_rerun">Rerun</string>
    <string name="action_share">Share</string>
    <string name="share_chooser_title">Share via</string>
    <string name="dialog_errors_title">Errors</string>

    <!-- Settings activity -->
    <string name="settings_title">Project settings</string>
    <string name="settings_change_main_function">Change main function</string>
    <string name="settings_change_color_palette">Change color palette</string>
    <string-array name="color_palettes">
        <item>Arendelle Classic</item>
        <item>Sparkling Blue</item>
        <item>Arendelle Pink</item>
        <item>Simple Red</item>
        <item>White Legacy</item>
    </string-array>

    <!-- App settings activity -->
    <string name="app_settings_title">App settings</string>

    <!-- JArendelle core -->
    <string name="dialog_input_title">Input</string>
    <string name="dialog_input_sign_space">Sign space \'@%1$s\' with a number</string>
    <string name="dialog_input_sign_stored_space">Sign stored space \'$%1$s\' with a number</string>

</resources>