<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_basics"
        android:title="@string/action_basics"
        app:showAsAction="never" />

    <item android:id="@+id/action_learn"
        android:title="@string/action_learn"
        app:showAsAction="never" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item android:id="@+id/action_report_bug"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
