<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/dialog_new_project_title"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_new_project_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/dialog_new_project_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textNoSuggestions"
        android:hint="@string/dialog_new_project_name"
        android:id="@+id/dialog_new_project_text_name"
        android:layout_below="@+id/dialog_new_project_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textNoSuggestions"
        android:hint="@string/dialog_new_project_main_function_name"
        android:id="@+id/dialog_new_project_text_main_function_name"
        android:layout_below="@+id/dialog_new_project_text_name" />

</RelativeLayout>